--- a/elements/chickadee-progress-stepper/chickadee-progress-stepper.css
+++ b/elements/chickadee-progress-stepper/chickadee-progress-stepper.css
@@ -1,11 +1,11 @@
 :host {
   container-type: inline-size;
   display: block;
+  overflow: hidden;
 }
 
 #container {
   display: flex;
-  gap: var(--chickadee-space-lg, 16px);
 }
 
 slot {
